# vn_stock_advisor

./: .env.backup  .gitignore  INDUSTRY_STOCK_ADVISOR_GUIDE.md  LICENSE  MARKET_ANALYSIS_SETUP.md  MARKET_REPORT_FIX.md  OPTIMIZED_SCANNER_GUIDE.md  PREDICTION_FEATURE.md  README.md  WATCHLIST_GUIDE.md  dashboard.py  demo_complete_system.py  demo_industry_advisor.py  demo_optimized_scanner.py  demo_stock_scanner.py  final_decision.json  final_report.json  fundamental_analysis.md  industry_stock_advisor_ui.py  market_analysis.md  mobile_app.py  optimized_scanner_ui.py  portfolio.sqlite3  pyproject.toml  report1.md  report2.md  report3.md  run_telegram_bot.sh  run_telegram_bot_with_market_analysis.sh  streamlit_app.py  technical_analysis.md  telegram_portfolio_bot.py  test_data_sources.py  test_final_market_report.py  test_industry_advisor_simple.py  test_intrinsic_value.py  test_market_analysis.py  test_market_analysis_simple.py  test_market_report_fix.py  test_market_report_simple.py  (+16 more)
.cache/: index.json
.macro_cache/: daily_news_analysis.json
api/: main.py
knowledge/: PE_PB_industry_average.json  PE_PB_industry_average.txt  enhanced_industry_benchmarks.json
response_example/: FPT_fundamental_analysis.md  FPT_market_analysis.md  HPG_final_decision.json  HPG_fundamental_analysis.md  HPG_market_analysis.md  HPG_technical_analysis.md
response_example/after_improve/: final_decision.json  fundamental_analysis.md  market_analysis.md  technical_analysis.md
response_example/before_improve/: FPT_final_decision.json  (+1 more)
tests/: fund_tool_test.py  ratio_collect_test.py  tech_tool_test.py  test_intrinsic_dig.py  test_intrinsic_vic.py  test_pattern_only.py  test_phase2.py  test_phase2_modules.py  test_phase3.py  test_phase4.py
(+55 files in other folders)
