[project]
name = "vn_stock_advisor"
version = "0.8.0"
description = "vn_stock_advisor using Multiple AI Agent - powered by Google Gemini and CrewAI"
authors = [{ name = "Duong Anh Minh", email = "duonganhminhapple@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.0",
    "google-generativeai>=0.8.4",
    "python-dotenv>=1.1.0",
    "vnstock>=3.2.4",
    "python-telegram-bot==21.6",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
vn_stock_advisor = "vn_stock_advisor.main:run"
run_crew = "vn_stock_advisor.main:run"
train = "vn_stock_advisor.main:train"
replay = "vn_stock_advisor.main:replay"
test = "vn_stock_advisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
